--- a/.github/ISSUE_TEMPLATE/invitation.yml
+++ b/.github/ISSUE_TEMPLATE/invitation.yml
@@ -11,7 +11,7 @@ body:
     validations:
       required: true
   - type: input
-    id: discordname
+    id: linkedIn
     attributes:
       label: Your LinkedIn  (if applicable)
       placeholder: Insert your LinkedIn profile link here
@@ -27,4 +27,3 @@ body:
   - type: markdown
     attributes:
       value: |
-      
