--- a/.github/ISSUE_TEMPLATE/invitation.yml
+++ b/.github/ISSUE_TEMPLATE/invitation.yml
@@ -13,7 +13,7 @@ body:
   - type: input
     id: linkedIn
     attributes:
-      label: Your LinkedIn  (if applicable)
+      label: Your LinkedIn (if applicable)
       placeholder: Insert your LinkedIn profile link here
     validations:
       required: false
@@ -27,3 +27,5 @@ body:
   - type: markdown
     attributes:
       value: |
+        Thank you for considering joining our GitHub Community Organization!
+        Your request will be reviewed shortly.
